--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.0|8.1|8.2",
         "guzzlehttp/guzzle": "^7.0",
         "spatie/laravel-package-tools": "^1.9.2"
     },
