Support Strapi v5 in API URL handling and filtering.
Updated logic in StrapiUploads and StrapiField to include support for Strapi v5, ensuring compatibility with the new version. Also updated the composer version and added changelog entries for v5 support.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "silentweb/strapi-wrapper",
+    "version": "5.0.1",
     "description": "A Laravel Wrapper for Strapi",
     "keywords": [
         "SilentWeb",
